zssp has been moved into it's own crate.

zssp has been cut up into several files, only the new zssp.rs file contains the critical security path.

Standardized the naming conventions for security variables throughout zssp.

Implemented a safer version of write_all for zssp to use. This has 3 benefits: it completely prevents unknown io errors, making error handling easier and self-documenting; it completely prevents src from being truncated in dest, putting in an extra barrier to prevent catastrophic key truncation; and it has slightly less performance overhead than a write_all.